Get rid of pixelation on HiDPI displays

Differential revision: https://phabricator.kde.org/D29421
BUG: 419527
FIXED-IN: 20.04.2